maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:75: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean = {
                       ^Escaper:88: error: identifier expected but '}' found.
}
^